--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
     <div class="container ">
       <div class="banner rounded-4 p-5"
         style="background-image: url(somto.jpg); background-size: cover ; background-repeat: no-repeat; background-position: center;">
-        <div class="text-content text-white py-5 my-5">
+        <div class="text-content text-white py-5 my-5 container">
           <p class="fs-4">
             Software developer/ Graphics designer
           </p>
-          <h1 class="display-1">
+          <h1 class="display-1 ">
             Somtochukwu <br> Asianya
           </h1>
         </div>
